java/src/com/easyinsight/calculations/generated/CalculationsParser.java
// $ANTLR 3.5.1 /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g 2013-12-11 13:55:32
 package com.easyinsight.calculations.generated; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class CalculationsParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Add", "And", "BracketedVariable", 
		"Character", "CloseBrace", "CloseParen", "Comma", "Decimal", "Digit", 
		"Divide", "Dot", "Equals", "Exp", "FuncEval", "GreaterThan", "GreaterThanEqualTo", 
		"HideWhiteSpace", "Integer", "InternationalCharacters", "LessThan", "LessThanEqualTo", 
		"LowerCase", "Multiply", "NoBracketSpecialChars", "NoBracketsVariable", 
		"Not", "NotEquals", "OpenBrace", "OpenParen", "Or", "Quote", "SpecialChars", 
		"String", "Subtract", "UInteger", "UpperCase", "VariableSpecialChars", 
		"VariableToken", "VariableWhitespace", "Whitespace"
	};
	public static final int EOF=-1;
	public static final int Add=4;
	public static final int And=5;
	public static final int BracketedVariable=6;
	public static final int Character=7;
	public static final int CloseBrace=8;
	public static final int CloseParen=9;
	public static final int Comma=10;
	public static final int Decimal=11;
	public static final int Digit=12;
	public static final int Divide=13;
	public static final int Dot=14;
	public static final int Equals=15;
	public static final int Exp=16;
	public static final int FuncEval=17;
	public static final int GreaterThan=18;
	public static final int GreaterThanEqualTo=19;
	public static final int HideWhiteSpace=20;
	public static final int Integer=21;
	public static final int InternationalCharacters=22;
	public static final int LessThan=23;
	public static final int LessThanEqualTo=24;
	public static final int LowerCase=25;
	public static final int Multiply=26;
	public static final int NoBracketSpecialChars=27;
	public static final int NoBracketsVariable=28;
	public static final int Not=29;
	public static final int NotEquals=30;
	public static final int OpenBrace=31;
	public static final int OpenParen=32;
	public static final int Or=33;
	public static final int Quote=34;
	public static final int SpecialChars=35;
	public static final int String=36;
	public static final int Subtract=37;
	public static final int UInteger=38;
	public static final int UpperCase=39;
	public static final int VariableSpecialChars=40;
	public static final int VariableToken=41;
	public static final int VariableWhitespace=42;
	public static final int Whitespace=43;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CalculationsParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CalculationsParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CalculationsParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g"; }


	public static class expr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:37:1: expr : evaluation ( ( And ^| Or ^) evaluation )* ;
	public final CalculationsParser.expr_return expr() throws RecognitionException {
		CalculationsParser.expr_return retval = new CalculationsParser.expr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token And2=null;
		Token Or3=null;
		ParserRuleReturnScope evaluation1 =null;
		ParserRuleReturnScope evaluation4 =null;

		Object And2_tree=null;
		Object Or3_tree=null;

		try {
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:37:6: ( evaluation ( ( And ^| Or ^) evaluation )* )
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:37:8: evaluation ( ( And ^| Or ^) evaluation )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_evaluation_in_expr216);
			evaluation1=evaluation();
			state._fsp--;

			adaptor.addChild(root_0, evaluation1.getTree());

			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:37:19: ( ( And ^| Or ^) evaluation )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==And||LA2_0==Or) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:37:20: ( And ^| Or ^) evaluation
					{
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:37:20: ( And ^| Or ^)
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==And) ) {
						alt1=1;
					}
					else if ( (LA1_0==Or) ) {
						alt1=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 1, 0, input);
						throw nvae;
					}

					switch (alt1) {
						case 1 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:37:21: And ^
							{
							And2=(Token)match(input,And,FOLLOW_And_in_expr220); 
							And2_tree = (Object)adaptor.create(And2);
							root_0 = (Object)adaptor.becomeRoot(And2_tree, root_0);

							}
							break;
						case 2 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:37:28: Or ^
							{
							Or3=(Token)match(input,Or,FOLLOW_Or_in_expr225); 
							Or3_tree = (Object)adaptor.create(Or3);
							root_0 = (Object)adaptor.becomeRoot(Or3_tree, root_0);

							}
							break;

					}

					pushFollow(FOLLOW_evaluation_in_expr229);
					evaluation4=evaluation();
					state._fsp--;

					adaptor.addChild(root_0, evaluation4.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class startExpr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "startExpr"
	// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:40:1: startExpr : expr EOF !;
	public final CalculationsParser.startExpr_return startExpr() throws RecognitionException {
		CalculationsParser.startExpr_return retval = new CalculationsParser.startExpr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF6=null;
		ParserRuleReturnScope expr5 =null;

		Object EOF6_tree=null;

		try {
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:41:2: ( expr EOF !)
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:41:4: expr EOF !
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_expr_in_startExpr241);
			expr5=expr();
			state._fsp--;

			adaptor.addChild(root_0, expr5.getTree());

			EOF6=(Token)match(input,EOF,FOLLOW_EOF_in_startExpr243); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "startExpr"


	public static class evaluation_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "evaluation"
	// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:43:1: evaluation : sum ( ( LessThanEqualTo ^| GreaterThanEqualTo ^| Equals ^| NotEquals ^| GreaterThan ^| LessThan ^) sum )* ;
	public final CalculationsParser.evaluation_return evaluation() throws RecognitionException {
		CalculationsParser.evaluation_return retval = new CalculationsParser.evaluation_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LessThanEqualTo8=null;
		Token GreaterThanEqualTo9=null;
		Token Equals10=null;
		Token NotEquals11=null;
		Token GreaterThan12=null;
		Token LessThan13=null;
		ParserRuleReturnScope sum7 =null;
		ParserRuleReturnScope sum14 =null;

		Object LessThanEqualTo8_tree=null;
		Object GreaterThanEqualTo9_tree=null;
		Object Equals10_tree=null;
		Object NotEquals11_tree=null;
		Object GreaterThan12_tree=null;
		Object LessThan13_tree=null;

		try {
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:2: ( sum ( ( LessThanEqualTo ^| GreaterThanEqualTo ^| Equals ^| NotEquals ^| GreaterThan ^| LessThan ^) sum )* )
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:4: sum ( ( LessThanEqualTo ^| GreaterThanEqualTo ^| Equals ^| NotEquals ^| GreaterThan ^| LessThan ^) sum )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_sum_in_evaluation253);
			sum7=sum();
			state._fsp--;

			adaptor.addChild(root_0, sum7.getTree());

			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:8: ( ( LessThanEqualTo ^| GreaterThanEqualTo ^| Equals ^| NotEquals ^| GreaterThan ^| LessThan ^) sum )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==Equals||(LA4_0 >= GreaterThan && LA4_0 <= GreaterThanEqualTo)||(LA4_0 >= LessThan && LA4_0 <= LessThanEqualTo)||LA4_0==NotEquals) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:9: ( LessThanEqualTo ^| GreaterThanEqualTo ^| Equals ^| NotEquals ^| GreaterThan ^| LessThan ^) sum
					{
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:9: ( LessThanEqualTo ^| GreaterThanEqualTo ^| Equals ^| NotEquals ^| GreaterThan ^| LessThan ^)
					int alt3=6;
					switch ( input.LA(1) ) {
					case LessThanEqualTo:
						{
						alt3=1;
						}
						break;
					case GreaterThanEqualTo:
						{
						alt3=2;
						}
						break;
					case Equals:
						{
						alt3=3;
						}
						break;
					case NotEquals:
						{
						alt3=4;
						}
						break;
					case GreaterThan:
						{
						alt3=5;
						}
						break;
					case LessThan:
						{
						alt3=6;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 3, 0, input);
						throw nvae;
					}
					switch (alt3) {
						case 1 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:10: LessThanEqualTo ^
							{
							LessThanEqualTo8=(Token)match(input,LessThanEqualTo,FOLLOW_LessThanEqualTo_in_evaluation257); 
							LessThanEqualTo8_tree = (Object)adaptor.create(LessThanEqualTo8);
							root_0 = (Object)adaptor.becomeRoot(LessThanEqualTo8_tree, root_0);

							}
							break;
						case 2 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:29: GreaterThanEqualTo ^
							{
							GreaterThanEqualTo9=(Token)match(input,GreaterThanEqualTo,FOLLOW_GreaterThanEqualTo_in_evaluation262); 
							GreaterThanEqualTo9_tree = (Object)adaptor.create(GreaterThanEqualTo9);
							root_0 = (Object)adaptor.becomeRoot(GreaterThanEqualTo9_tree, root_0);

							}
							break;
						case 3 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:51: Equals ^
							{
							Equals10=(Token)match(input,Equals,FOLLOW_Equals_in_evaluation267); 
							Equals10_tree = (Object)adaptor.create(Equals10);
							root_0 = (Object)adaptor.becomeRoot(Equals10_tree, root_0);

							}
							break;
						case 4 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:61: NotEquals ^
							{
							NotEquals11=(Token)match(input,NotEquals,FOLLOW_NotEquals_in_evaluation272); 
							NotEquals11_tree = (Object)adaptor.create(NotEquals11);
							root_0 = (Object)adaptor.becomeRoot(NotEquals11_tree, root_0);

							}
							break;
						case 5 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:74: GreaterThan ^
							{
							GreaterThan12=(Token)match(input,GreaterThan,FOLLOW_GreaterThan_in_evaluation277); 
							GreaterThan12_tree = (Object)adaptor.create(GreaterThan12);
							root_0 = (Object)adaptor.becomeRoot(GreaterThan12_tree, root_0);

							}
							break;
						case 6 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:44:89: LessThan ^
							{
							LessThan13=(Token)match(input,LessThan,FOLLOW_LessThan_in_evaluation282); 
							LessThan13_tree = (Object)adaptor.create(LessThan13);
							root_0 = (Object)adaptor.becomeRoot(LessThan13_tree, root_0);

							}
							break;

					}

					pushFollow(FOLLOW_sum_in_evaluation286);
					sum14=sum();
					state._fsp--;

					adaptor.addChild(root_0, sum14.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "evaluation"


	public static class sum_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "sum"
	// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:46:1: sum : term ( ( Add ^| Subtract ^) term )* ;
	public final CalculationsParser.sum_return sum() throws RecognitionException {
		CalculationsParser.sum_return retval = new CalculationsParser.sum_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Add16=null;
		Token Subtract17=null;
		ParserRuleReturnScope term15 =null;
		ParserRuleReturnScope term18 =null;

		Object Add16_tree=null;
		Object Subtract17_tree=null;

		try {
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:46:5: ( term ( ( Add ^| Subtract ^) term )* )
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:46:7: term ( ( Add ^| Subtract ^) term )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_term_in_sum296);
			term15=term();
			state._fsp--;

			adaptor.addChild(root_0, term15.getTree());

			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:46:12: ( ( Add ^| Subtract ^) term )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==Add||LA6_0==Subtract) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:46:13: ( Add ^| Subtract ^) term
					{
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:46:13: ( Add ^| Subtract ^)
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==Add) ) {
						alt5=1;
					}
					else if ( (LA5_0==Subtract) ) {
						alt5=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 5, 0, input);
						throw nvae;
					}

					switch (alt5) {
						case 1 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:46:14: Add ^
							{
							Add16=(Token)match(input,Add,FOLLOW_Add_in_sum300); 
							Add16_tree = (Object)adaptor.create(Add16);
							root_0 = (Object)adaptor.becomeRoot(Add16_tree, root_0);

							}
							break;
						case 2 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:46:21: Subtract ^
							{
							Subtract17=(Token)match(input,Subtract,FOLLOW_Subtract_in_sum305); 
							Subtract17_tree = (Object)adaptor.create(Subtract17);
							root_0 = (Object)adaptor.becomeRoot(Subtract17_tree, root_0);

							}
							break;

					}

					pushFollow(FOLLOW_term_in_sum309);
					term18=term();
					state._fsp--;

					adaptor.addChild(root_0, term18.getTree());

					}
					break;

				default :
					break loop6;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "sum"


	public static class term_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "term"
	// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:48:1: term : unaryOperator ( ( Multiply ^| Divide ^) unaryOperator )* ;
	public final CalculationsParser.term_return term() throws RecognitionException {
		CalculationsParser.term_return retval = new CalculationsParser.term_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Multiply20=null;
		Token Divide21=null;
		ParserRuleReturnScope unaryOperator19 =null;
		ParserRuleReturnScope unaryOperator22 =null;

		Object Multiply20_tree=null;
		Object Divide21_tree=null;

		try {
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:48:6: ( unaryOperator ( ( Multiply ^| Divide ^) unaryOperator )* )
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:48:8: unaryOperator ( ( Multiply ^| Divide ^) unaryOperator )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_unaryOperator_in_term319);
			unaryOperator19=unaryOperator();
			state._fsp--;

			adaptor.addChild(root_0, unaryOperator19.getTree());

			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:48:22: ( ( Multiply ^| Divide ^) unaryOperator )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==Divide||LA8_0==Multiply) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:48:23: ( Multiply ^| Divide ^) unaryOperator
					{
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:48:23: ( Multiply ^| Divide ^)
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==Multiply) ) {
						alt7=1;
					}
					else if ( (LA7_0==Divide) ) {
						alt7=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 7, 0, input);
						throw nvae;
					}

					switch (alt7) {
						case 1 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:48:24: Multiply ^
							{
							Multiply20=(Token)match(input,Multiply,FOLLOW_Multiply_in_term323); 
							Multiply20_tree = (Object)adaptor.create(Multiply20);
							root_0 = (Object)adaptor.becomeRoot(Multiply20_tree, root_0);

							}
							break;
						case 2 :
							// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:48:36: Divide ^
							{
							Divide21=(Token)match(input,Divide,FOLLOW_Divide_in_term328); 
							Divide21_tree = (Object)adaptor.create(Divide21);
							root_0 = (Object)adaptor.becomeRoot(Divide21_tree, root_0);

							}
							break;

					}

					pushFollow(FOLLOW_unaryOperator_in_term332);
					unaryOperator22=unaryOperator();
					state._fsp--;

					adaptor.addChild(root_0, unaryOperator22.getTree());

					}
					break;

				default :
					break loop8;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "term"


	public static class unaryOperator_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "unaryOperator"
	// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:50:1: unaryOperator : ( Add ^| Subtract ^| Not ^)? exponent ;
	public final CalculationsParser.unaryOperator_return unaryOperator() throws RecognitionException {
		CalculationsParser.unaryOperator_return retval = new CalculationsParser.unaryOperator_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Add23=null;
		Token Subtract24=null;
		Token Not25=null;
		ParserRuleReturnScope exponent26 =null;

		Object Add23_tree=null;
		Object Subtract24_tree=null;
		Object Not25_tree=null;

		try {
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:51:2: ( ( Add ^| Subtract ^| Not ^)? exponent )
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:51:4: ( Add ^| Subtract ^| Not ^)? exponent
			{
			root_0 = (Object)adaptor.nil();


			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:51:4: ( Add ^| Subtract ^| Not ^)?
			int alt9=4;
			switch ( input.LA(1) ) {
				case Add:
					{
					alt9=1;
					}
					break;
				case Subtract:
					{
					alt9=2;
					}
					break;
				case Not:
					{
					alt9=3;
					}
					break;
			}
			switch (alt9) {
				case 1 :
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:51:5: Add ^
					{
					Add23=(Token)match(input,Add,FOLLOW_Add_in_unaryOperator344); 
					Add23_tree = (Object)adaptor.create(Add23);
					root_0 = (Object)adaptor.becomeRoot(Add23_tree, root_0);

					}
					break;
				case 2 :
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:51:12: Subtract ^
					{
					Subtract24=(Token)match(input,Subtract,FOLLOW_Subtract_in_unaryOperator349); 
					Subtract24_tree = (Object)adaptor.create(Subtract24);
					root_0 = (Object)adaptor.becomeRoot(Subtract24_tree, root_0);

					}
					break;
				case 3 :
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:51:24: Not ^
					{
					Not25=(Token)match(input,Not,FOLLOW_Not_in_unaryOperator354); 
					Not25_tree = (Object)adaptor.create(Not25);
					root_0 = (Object)adaptor.becomeRoot(Not25_tree, root_0);

					}
					break;

			}

			pushFollow(FOLLOW_exponent_in_unaryOperator359);
			exponent26=exponent();
			state._fsp--;

			adaptor.addChild(root_0, exponent26.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "unaryOperator"


	public static class exponent_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "exponent"
	// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:52:1: exponent : factor ( Exp ^ unaryOperator )? ;
	public final CalculationsParser.exponent_return exponent() throws RecognitionException {
		CalculationsParser.exponent_return retval = new CalculationsParser.exponent_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Exp28=null;
		ParserRuleReturnScope factor27 =null;
		ParserRuleReturnScope unaryOperator29 =null;

		Object Exp28_tree=null;

		try {
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:52:9: ( factor ( Exp ^ unaryOperator )? )
			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:52:11: factor ( Exp ^ unaryOperator )?
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_factor_in_exponent365);
			factor27=factor();
			state._fsp--;

			adaptor.addChild(root_0, factor27.getTree());

			// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:52:18: ( Exp ^ unaryOperator )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==Exp) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// /Users/Alan/Documents/EIGit/easyinsight/java/src/com/easyinsight/calculations/Calculations.g:52:19: Exp ^ unaryOperator
					{
					Exp28=(Token)match(input,Exp,FOLLOW_Exp_in_exponent368); 
					Exp28_tree = (Object)adaptor.create(Exp28);
					root_0 = (Object)adaptor.becomeRoot(Exp28_tree, root_0);

					pushFollow(FOLLOW_unaryOperator_in_exponent371);
					unaryOperator29=unaryOperator();
					state._fsp--;

					adaptor.addChild(root_0, unaryOperator29.getTree());

					}
					break;

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "exponent"


	public static class factor_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};

